Improve object-server scripts